--- a/index.css
+++ b/index.css
@@ -435,6 +435,8 @@
 
 /*-----home css start----*/
 
+ /*-----home css start----*/
+
 *{
   margin:0;
   padding:0;
@@ -554,6 +556,8 @@
 
 /*-----home css end----*/
 
+/*-----home css end----*/
+
 /*-----services css start----*/
 
 .service{
@@ -939,6 +943,7 @@
 
 
 /*-----Get Started button css end----*/
+
 
 
 
