--- a/index.css
+++ b/index.css
@@ -10,21 +10,63 @@
     body{
       background:#f4f6f9;
     }
+/* ===== FIXED HEADER START ===== */
 
-    /* Header */
-    header{
-      background:#0d47a1;
-      color:white;
-      padding:15px 50px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-    }
+.main-header{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:80px;
 
-    header h1{
-      font-size:26px;
-    }
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 
+  padding:0 60px;
+
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(8px);
+
+  box-shadow:0 5px 20px rgba(0,0,0,0.3);
+
+  z-index:1000;
+}
+
+.logo{
+  font-size:22px;
+  font-weight:bold;
+  color:white;
+}
+
+.navbar a{
+  margin-left:30px;
+  text-decoration:none;
+  color:white;
+  font-size:16px;
+  position:relative;
+  transition:0.3s;
+}
+
+/* Hover Effect */
+.navbar a:hover{
+  color:#ffcc00;
+}
+
+/* Active Page */
+.navbar .active{
+  color:#ffcc00;
+  font-weight:bold;
+}
+
+/* Content Top Spacing (Important) */
+body{
+  padding-top:90px;
+}
+
+/* ===== FIXED HEADER END ===== */
+
+  
     nav a{
       color:white;
       text-decoration:none;
@@ -673,6 +715,7 @@
 
 
 /*-----Get Started button css end----*/
+
 
 
 
