--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ body{
 
   
     nav a{
-      color:white;
+      color:blue;
       text-decoration:none;
       margin-left:20px;
       font-size:16px;
@@ -715,6 +715,7 @@ body{
 
 
 /*-----Get Started button css end----*/
+
 
 
 
